# Live-Video-Magnification

./: .gitignore  CMakeLists.txt  CMakePresets.json  COPYING  README.md  vcpkg.json
src/: rvm.pro
src/main/: main.cpp
src/main/helper/: ComplexMat.h  MatToQImage.cpp  MatToQImage.h  SharedImageBuffer.cpp  SharedImageBuffer.h
src/main/magnification/: Magnificator.cpp  Magnificator.h  RieszPyramid.cpp  RieszPyramid.h  SpatialFilter.cpp  SpatialFilter.h  TemporalFilter.cpp  TemporalFilter.h
src/main/other/: Buffer.h  Config.h  Structures.h
src/main/threads/: CaptureThread.cpp  CaptureThread.h  PlayerThread.cpp  PlayerThread.h  ProcessingThread.cpp  ProcessingThread.h  SavingThread.cpp  SavingThread.h
src/main/ui/: CameraConnectDialog.cpp  CameraConnectDialog.h  CameraConnectDialog.ui  CameraView.cpp  CameraView.h  CameraView.ui  FrameLabel.cpp  FrameLabel.h  MagnifyOptions.cpp  MagnifyOptions.h  MagnifyOptions.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  VideoView.cpp  VideoView.h  VideoView.ui
